Update SpringController.java
Co-authored-by: Siyuan106 <gr23994@bristol.ac.uk>